--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -55,7 +55,6 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
 }
 
 body {
@@ -66,7 +65,7 @@ body {
     color 0.5s,
     background-color 0.5s;
   line-height: 1.6;
-  font-family:
+  font-family: 'Raleway',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
