Color del border de header y cambiar el height de app para que ocupe el resto de la pantalla.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,6 +34,10 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+
+
+  --color-header-border:#DD6D45;
+  --header-heigth: 60px;
 }
 
 /* @media (prefers-color-scheme: dark) {
