--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,8 @@
 @import './base.css';
+@import "./components/button.css";
+@import "./components/inputSelectNumber.css";
+@import "./components/contentBlock.css";
+@import "./components/navbarReport.css";
 
 a,.green {
   text-decoration: none;
@@ -28,66 +32,8 @@ a,.green {
 
 }
 
-.btn{
-  border-radius: 60px !important;
-  color: white !important;
-  border: transparent;
-  align-items: flex-end;
-}
-.btn_padding{
-  padding: 1% 5% !important;
-}
-.btn_weight{
-  font-weight: 600 !important;
-}
-.btn_start{
-  width: 25%;
-}
+
 .alert_help .v-alert__content {
   align-self: initial;
 }
-.v-expansion-panel__shadow {
-   box-shadow: none !important;
 
-}
-.v-expansion-panel:not(:first-child)::after {
-   border-top-style: none;
-   border-top-width: initial;
-
-}
-.v-expansion-panel:not(:first-child)::after {
-   border-color: transparent !important;
-}
-.selected .v-input__control {
-  display: flex;
-  grid-area: control;
-  border-radius: 20px;
-  border: 1px solid transparent;
-  box-shadow: none;
-}
-.selected .v-input__control .v-field__outline:before {
-  content: none !important;
-}
-.selected .v-field {
-  border-radius: 10px !important;
-}
-.selected .v-input__details {
-   display: none !important;
-}
-.selected .v-input__control .v-field .v-field__overlay,
-.selected .v-input__control .v-field  .v-field__append-inner,
-.selected .v-input__control .v-field .v-field__field{
-  height: 80% !important;
-}
-
-.v-navigation-drawer__scrim {
-  position: inherit !important;
-  display: none;
-}
-.v-card-actions{
-  justify-content: center;
-  margin-bottom: 10px !important;
-}
-.navbar .v-navigation-drawer__content {
-  display: contents;
-}
