--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,8 +38,11 @@ a,.green {
   align-self: initial;
 }
 
-#chart{
+#chart, #chart>*{
   /*display: none;*/
   visibility: hidden;
   position: absolute;
+  top: 0;
+  left: -50%;
+  z-index:-5;
 }
